2003-02-26  Francois Dechelle  <dechelle@mac-dechelle.ircam.fr>

	* changed Mac OS X audio port to support multiple devices. BUT it does not work 
	(mainly because the IOProcs are called in different threads). Current fix is to
	allow only the default output device in the configuration.

	* fixed fts/audio.c: when changing a label's port, channel change to 0 was not mirrored 
	to the client.
	
2003-02-25  Patrice Tisserand  <Patrice.Tisserand@ircam.fr>

	* change fts_udpstream_t implementation
	constructor arguments:	   
	   <input>: port (int)
	   <output>: host (symbol) port (int)

	constructor call:
           udpstream <input>          : can receive
	   udpstream <input> <output> : can receive and send
	   udpstream <->     <output> : can send  
	   
	
	* now udpstream is never connected
	
	* remove fts_udpstream_get_port, fts_udpstream_get_connected_port, fts_udpstream_connect
	and fts_udpstream_disconnect functions.

	* remove unused fts_tcpstream_t and fts_tcpstream_class

2003-02-25  Norbert Schnell  <schnell@mac-schnell2.ircam.fr>

	* fixed several (unreported) minor bugs in object set
	* added missing help patches in all packages but signal and io

2003-02-24  Patrice Tisserand  <Patrice.Tisserand@ircam.fr>

	* begin to fix "Open Project" FTS crash

2003-02-21  Francois Dechelle  <dechelle@limbe.ircam.fr>

	* cleaned the default project/configuration search
	* fixed Mac OS X default project/configuration file names

2003-02-21  Patrice Tisserand  <Patrice.Tisserand@ircam.fr>

	* fix bug "[690449] osc~ help patcher does not define $w" submitted by etienne (edelefile) on sourceforge

2003-02-20  Patrice Tisserand <Patrice.Tisserand@ircam.fr>

	* add fts_file_find_in_env function (find a file in paths defined by the contains of an environment variable

	* move fts_file_find_in_path declaration from jmax/ftsprivate/file.h to jmax/include/fts/file.h (this function is now public)

2003-02-20  Norbert Schnell  <schnell@mac-schnell2.ircam.fr>
