@@ -1,3 +1,7 @@
+2003-02-27  Francois Dechelle  <dechelle@mac-dechelle.ircam.fr>
+
+	* fixed Mac OS X audio port opening w.r.t. ports that are unidirectionnal.
+
 2003-02-26  Francois Dechelle  <dechelle@mac-dechelle.ircam.fr>
 
 	* changed Mac OS X audio port to support multiple devices. BUT it does not work 
